kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-container
          image: gcr.io/academic-ratio-458818-s9/django-app:latest
          volumeMounts:
            - name: sqlite-storage
              mountPath: /data  # Mount the volume into a directory, not a file
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
