kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
spec:
  selector:
    app: django
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
